Refactorisation documentation
